objects/Target_List__c.object
<CustomObject>
    <description>This object tracks the list of Targeted Lead and Campaign Member list</description>
    <fields>
        <fullName>Approved_Amount__c</fullName>
        <label>Approved Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Borrower_CIS_ID__c</fullName>
        <label>Borrower CIS ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Borrower_Name__c</fullName>
        <label>Borrower Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CASA__c</fullName>
        <label>CASA</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CIS_ID_Prospect_Name__c</fullName>
        <label>CIS ID / Prospect Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Campaign_Members_Leads</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CIS_ID_Search__c</fullName>
        <formula>CIS_ID_Prospect_Name__r.CIS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CIS ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Result__c</fullName>
        <label>Call Result</label>
        <picklist>
            <picklistValues>
                <fullName>1. ลูกค้าสนใจและขอสินเชื่อในครั้งนี้</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. ลูกค้าสนใจแต่ติดเงื่อนไข</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. ลูกค้าไม่สนใจ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. ติดปัญหาเรื่องการดำเนินการ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. เก็บไว้เป็น Lead ในครั้งหน้า</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. ตัดออกจากรายชื่อ Lead (ระยะเวลา 6 เดือน)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Campaign_Lead_Status__c</fullName>
        <label>Campaign Lead Status</label>
        <picklist>
            <picklistValues>
                <fullName>Register</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Register</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Interested This Time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Campaign_Reward_Calc__c</fullName>
        <label>Campaign Reward Calc</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Reward__c</fullName>
        <formula>IF( OR (Lead_Campaign__r.Lead_Campaign_Event_Code__c =   $Setup.Campaign_Setting__c.NewBooking_Code__c, Lead_Campaign__r.Lead_Campaign_Event_Code__c  =  $Setup.Campaign_Setting__c.ThankYou_Code__c), 
IF( AND( ISPICKVAL(Status__c, &quot;Registered&quot;), OR( ISPICKVAL(Opportunity__r.StageName, &quot;All Loan Setup&quot;) ,ISPICKVAL(Opportunity__r.StageName, &quot;Partial Loan Setup&quot;))) , Campaign_Reward_Calc__c , 
&quot;-&quot;),  
&quot;-&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Reward</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chain_Name__c</fullName>
        <description>Value Chain Name</description>
        <label>Chain Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chain_Sponsor__c</fullName>
        <label>Chain Sponsor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Channel__c</fullName>
        <label>Contact Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Phone Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Face to Face</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Contact_Number__c</fullName>
        <label>Customer Contact Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Customer_Owner__c</fullName>
        <formula>CIS_ID_Prospect_Name__r.Owner.FirstName &amp; &quot; &quot; &amp;  CIS_ID_Prospect_Name__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <formula>Lead_Campaign__r.EndDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External_ID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>In_Call_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Call Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsInterested__c</fullName>
        <formula>CASE( Status__c,
&apos;New&apos;,0,
&apos;Done&apos;,0,
&apos;Registered&apos;,0,
&apos;Not interested&apos;,0,
&apos;Interested&apos;,1,
&apos;Not Interested This Time&apos;,0,
&apos;Customer Interested&apos;,1,
&apos;App In&apos;,1,
&apos;Approved&apos;,1,
&apos;Loan Setup&apos;,1,
&apos;Cancel Lead&apos;,0,
&apos;Interested but not register&apos;,1,
&apos;Lead Expired&apos;,0,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsInterested</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsMyTargetList__c</fullName>
        <formula>IF ( OR ( 
CIS_ID_Prospect_Name__r.Owner.NH_Employee_ID__c = $User.Employee_ID__c,
CIS_ID_Prospect_Name__r.Owner.AH_Employee_ID__c = $User.Employee_ID__c,
CIS_ID_Prospect_Name__r.Owner.TM_Employee_ID__c = $User.Employee_ID__c,
 CIS_ID_Prospect_Name__r.Owner.Employee_ID__c = $User.Employee_ID__c),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsMyTargetList</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsNoTouch__c</fullName>
        <formula>IF (  TEXT(Status__c) = &quot;NEW&quot;, 1,IF(  TEXT(Status__c) = &quot;Lead Expired&quot;,1,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsNoTouch</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsNotInterested__c</fullName>
        <formula>CASE( Status__c,
&apos;New&apos;,0,
&apos;Done&apos;,0,
&apos;Registered&apos;,0,
&apos;Not interested&apos;,1,
&apos;Interested&apos;,0,
&apos;Not Interested This Time&apos;,1,
&apos;Customer Interested&apos;,0,
&apos;App In&apos;,0,
&apos;Approved&apos;,0,
&apos;Loan Setup&apos;,0,
&apos;Cancel Lead&apos;,0,
&apos;Interested but not register&apos;,0,
&apos;Lead Expired&apos;,0,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsNotInterested</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsTouch__c</fullName>
        <formula>IF (  TEXT(Status__c) = &quot;NEW&quot;, 0,IF(  TEXT(Status__c) = &quot;Lead Expired&quot;,0,1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsTouch</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Campaign__c</fullName>
        <label>Lead/Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Target Lists</relationshipLabel>
        <relationshipName>Campaign_Members_Leads</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Lead_Response__c</fullName>
        <formula>IF (  TEXT(Status__c) = &quot;NEW&quot;, &quot;ยังไม่ได้ดำเนินการ&quot;,IF(  TEXT(Status__c) = &quot;Lead Expired&quot;,&quot;ยังไม่ได้ดำเนินการ&quot;,&quot;ดำเนินการแล้ว&quot;))</formula>
        <label>Lead Response</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Subtype__c</fullName>
        <formula>TEXT(Lead_Campaign__r.Sub_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Subtype</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_To_Inform__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead To Inform</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Type__c</fullName>
        <formula>TEXT( Lead_Campaign__r.Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Main Customer</label>
        <referenceTo>Target_List__c</referenceTo>
        <relationshipLabel>Associate Customer</relationshipLabel>
        <relationshipName>Target_Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mobile_No__c</fullName>
        <label>Mobile No.</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Number_of_Lead__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Lead</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Target Lists</relationshipLabel>
        <relationshipName>Target_Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Option__c</fullName>
        <label>Reward New Booking Option</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Owner_AH__c</fullName>
        <formula>SUBSTITUTE(SUBSTITUTE( CIS_ID_Prospect_Name__r.Owner.Area_Name__c , &quot;ผู้บริหารธุรกิจ คป.1-&quot;, &quot;ME เขต &quot;) ,&quot;เขตธุรกิจลูกค้าผู้ประกอบการ 2&quot;, &quot;SE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner AH</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_NH__c</fullName>
        <formula>SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(CIS_ID_Prospect_Name__r.Owner.Network_Name__c , &quot;เครือข่ายลูกค้าผู้ประกอบการ 1&quot;, &quot;ME&quot;) ,&quot;เครือข่ายลูกค้าผู้ประกอบการ 2&quot;, &quot;SE&quot;),&quot;ตะวันออกเฉียงเหนือ&quot;,&quot;อีสาน&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner NH</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Team__c</fullName>
        <formula>SUBSTITUTE(SUBSTITUTE( CIS_ID_Prospect_Name__r.Owner.Team_Name__c , &quot;ทีมลูกค้าผู้ประกอบการ 1&quot;, &quot;ME&quot;) ,&quot;ทีมลูกค้าผู้ประกอบการ 2&quot;, &quot;SE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personalised_Message__c</fullName>
        <label>Personalised Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Re_assign_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Re-assign To</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>SME-TM</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Target_Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <picklist>
            <controllingField>Call_Result__c</controllingField>
            <picklistValues>
                <fullName>1.1 อยู่ระหว่างจัดเตรียมเอกสาร / รอเอกสารเพิ่มเติม</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.2 ส่ง Opp แล้วรอการอนุมัติ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.3 ได้ผลการอนุมัติแล้ว</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.1 รอตัดสินใจ/รอปรึกษาครอบครัว</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.2 ลูกค้าคุณสมบัติไม่ดี / ไม่ผ่านหลักเกณฑ์ธนาคาร</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.3 สนใจแต่ติดปัญหาเรื่องหลักประกัน</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.4 สนใจแต่มีประเด็นต่อรองเกี่ยวกับดอกเบี้ย / ค่าธรรมเนียม / ประกันชีวิต</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.5 สนใจแต่ไม่ใช่ในช่วงเดือนนี้</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.6 สนใจแต่วงเงินที่ลูกค้าต้องการไม่สอดคล้องกับ Source &amp; Use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.7 สนใจแต่วงเงินที่เสนอไม่เพียงพอ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.8 อื่น ๆ (ระบุในหมายเหตุ)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.1 มีเงินคงเหลือในบัญชีสูงหรือวงเงินเป็นตัวดำ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.2 ไม่สนใจติดเรื่องหลักประกัน หรือค่าใช้จ่าย</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.3 ยอดขายกิจการลดลง</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.4 ยังไม่มีแผนขยายธุรกิจ / วงเงินเดิมเพียงพอแล้ว</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.5 ลูกค้าคุณสมบัติไม่ดี / ไม่ผ่านหลักเกณฑ์ธนาคาร (ระบุในหมายเหตุ)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.6 หลักประกันมีมูลค่าคงเหลือไม่เพียงพอ / ไม่ผ่านเกณฑ์</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.7 อื่น ๆ (ระบุในหมายเหตุ)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.1 Refer ให้ผู้อื่นดำเนินการ (ระบุในหมายเหตุ)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.2 ที่อยู่ และเบอร์โทรศัพท์ไม่ถูกต้อง / ไม่มีข้อมูล</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.3 เพิ่งขอสินเชื่อไม่ถึง 3 เดือน</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.4 ลูกค้าคุณสมบัติไม่ดี / ไม่ผ่านหลักเกณฑ์ธนาคาร (ระบุในหมายเหตุ)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.5 ไม่สามารถติดต่อลูกค้าได้</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.6 เสียชีวิต / เลิกกิจการ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.7 หลักประกันมีมูลค่าคงเหลือไม่เพียงพอ / ไม่ผ่านเกณฑ์</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.8 อื่น ๆ (ระบุในหมายเหตุ)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Refer_or_Not__c</fullName>
        <label>Refer or Not ?</label>
        <picklist>
            <picklistValues>
                <fullName>ดูแลเอง</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refer-คุยกันเองแล้ว</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refer-ยังไม่ได้คุยกัน</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referred_Segment__c</fullName>
        <label>Referred Segment</label>
        <picklist>
            <picklistValues>
                <fullName>Micro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MB</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Register__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Register</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Registered_DateTime__c</fullName>
        <label>Registered DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Remark__c</fullName>
        <label>Remark</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reward__c</fullName>
        <label>Reward</label>
        <picklist>
            <picklistValues>
                <fullName>Cashback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>บัตรเติมน้ำมัน ปตท</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>บัตรเงินสด Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voucher ห้างทอง Aurora</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Setup_Amount_1__c</fullName>
        <formula>Opportunity__r.Setup_Amount_s__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Setup Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Setup_Amount__c</fullName>
        <label>Setup Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <formula>Lead_Campaign__r.StartDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Order_Flag__c</fullName>
        <formula>CASE( Status__c,
&apos;New&apos;,1,
&apos;Done&apos;,2,
&apos;Registered&apos;,3,
&apos;Not Register&apos;,4,
&apos;Not interested&apos;,5,
&apos;Interested&apos;,6,
&apos;Not Interested This Time&apos;,7,
&apos;Customer Interested&apos;,8,
&apos;App In&apos;,9,
&apos;Approved&apos;,10,
&apos;Loan Setup&apos;,11,
&apos;Cancel Lead&apos;,12,
&apos;Interested but not register&apos;,13,
&apos;Lead Expired&apos;,14,
99)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Order Flag</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Done</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Interested This Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>App In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan Setup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancel Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Expired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interested but not register</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stock Negotiation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Create Write Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting for Credit Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case is Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting for Credit Setup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial Loan Setup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All Loan Setup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Team_Name__c</fullName>
        <formula>CIS_ID_Prospect_Name__r.Owner.Team_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visit_Date__c</fullName>
        <label>Visit Date</label>
        <type>Date</type>
    </fields>
    <label>Target List</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Lead_Campaign__c</columns>
        <columns>Lead_Type__c</columns>
        <columns>CIS_ID_Prospect_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Personalised_Message__c</columns>
        <columns>Lead_To_Inform__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>R-{000000}</displayFormat>
        <label>REF#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Target Lists</pluralLabel>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <description>For standard type of Campaign / Lead</description>
        <label>Standard</label>
    </recordTypes>
    <recordTypes>
        <fullName>value_chain</fullName>
        <active>true</active>
        <description>Only use for Lead For Sales that subtype equal to Value Chain</description>
        <label>Value Chain</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Validate_Status_backward</fullName>
        <active>true</active>
        <description>Prevent user to change the status of the event record backward</description>
        <errorConditionFormula>ISCHANGED(Status__c) &amp;&amp; OR(Lead_Campaign__r.Lead_Campaign_Event_Code__c =  
$Setup.Campaign_Setting__c.NewBooking_Code__c,Lead_Campaign__r.Lead_Campaign_Event_Code__c =  $Setup.Campaign_Setting__c.ThankYou_Code__c) &amp;&amp; PRIORVALUE(Status_Order_Flag__c) &gt; Status_Order_Flag__c</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>ไม่อนุญาตให้เปลี่ยนสถานะย้อนกลับได้</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_change_status_period</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(Status__c) &amp;&amp; OR(Lead_Campaign__r.Lead_Campaign_Event_Code__c =  
$Setup.Campaign_Setting__c.NewBooking_Code__c,Lead_Campaign__r.Lead_Campaign_Event_Code__c =  $Setup.Campaign_Setting__c.ThankYou_Code__c) &amp;&amp; DATEVALUE(CreatedDate) +  $Setup.Campaign_Setting__c.Register_Period__c  &lt; TODAY()</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>ไม่สามารถเปลี่ยนสถานะได้หลังจากช่วงเวลาที่กำหนด</errorMessage>
    </validationRules>
</CustomObject>